// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return locales without crash 1`] = `
Object {
  "translation": Object {
    "notFound": "Page not found",
    "title": "My title",
  },
}
`;

exports[`Should return locales without crash 2`] = `
Object {
  "translation": Object {
    "notFound": "Página no encontrada",
    "title": "Mi titulo",
  },
}
`;

exports[`Should return locales without crash 3`] = `
Object {
  "translation": Object {
    "notFound": "Página não encontrada",
    "title": "O meu titulo",
  },
}
`;

exports[`Should return locales without crash 4`] = `
Object {
  "language": "pt",
  "languages": Array [
    "pt",
  ],
  "options": Object {
    "appendNamespaceToCIMode": false,
    "appendNamespaceToMissingKey": false,
    "contextSeparator": "_",
    "debug": false,
    "defaultNS": Array [
      "translation",
    ],
    "fallbackLng": Array [
      "pt",
    ],
    "fallbackNS": false,
    "ignoreJSONStructure": true,
    "initImmediate": true,
    "interpolation": Object {
      "escapeValue": false,
      "format": [Function],
      "formatSeparator": ",",
      "maxReplaces": 1000,
      "nestingOptionsSeparator": ",",
      "nestingPrefix": "$t(",
      "nestingSuffix": ")",
      "prefix": "{{",
      "skipOnVariables": true,
      "suffix": "}}",
      "unescapePrefix": "-",
    },
    "joinArrays": false,
    "keySeparator": ".",
    "lng": "pt",
    "load": "all",
    "missingInterpolationHandler": false,
    "missingKeyHandler": false,
    "nonExplicitSupportedLngs": false,
    "ns": Array [
      "translation",
    ],
    "nsSeparator": ":",
    "overloadTranslationOptionHandler": [Function],
    "parseMissingKeyHandler": false,
    "partialBundledLanguages": false,
    "pluralSeparator": "_",
    "postProcess": false,
    "postProcessPassResolved": false,
    "preload": false,
    "resources": Object {
      "en": Object {
        "translation": Object {
          "notFound": "Page not found",
          "title": "My title",
        },
      },
      "es": Object {
        "translation": Object {
          "notFound": "Página no encontrada",
          "title": "Mi titulo",
        },
      },
      "pt": Object {
        "translation": Object {
          "notFound": "Página não encontrada",
          "title": "O meu titulo",
        },
      },
    },
    "returnEmptyString": true,
    "returnNull": true,
    "returnObjects": false,
    "returnedObjectHandler": false,
    "saveMissing": false,
    "saveMissingPlurals": true,
    "saveMissingTo": "fallback",
    "simplifyPluralSuffix": true,
    "supportedLngs": false,
    "updateMissing": false,
  },
  "resolvedLanguage": "pt",
  "store": Object {
    "en": Object {
      "translation": Object {
        "notFound": "Page not found",
        "title": "My title",
      },
    },
    "es": Object {
      "translation": Object {
        "notFound": "Página no encontrada",
        "title": "Mi titulo",
      },
    },
    "pt": Object {
      "translation": Object {
        "notFound": "Página não encontrada",
        "title": "O meu titulo",
      },
    },
  },
}
`;
